# EQGZoneImporter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  EQG Zone Importer.sln  EQG Zone Importer.vcxproj  EQG Zone Importer.vcxproj.filters  README.md  README.txt  Resource.rc  convert.py  eqgzi-gui.sln  eqgzi-gui.vcxproj  eqgzi.sln  eqgzi.vcxproj  eqgzi.vcxproj.filters  resource.h
cmake/: DependencyHelperMSVC.cmake
dependencies/irrlicht-1.8.4/: README.md
gui/: eqgzi-gui.vcxproj
gui/Release-gui/: Resource.res  eqgzi-gui.exe.recipe
libs/: cd.lib  cdlua51.lib  freetype6.lib  iup.lib  iupcd.lib  iupcontrols.lib  iuplua51.lib  iupluacontrols51.lib  zlib1.lib
src/: geo.h  main.cpp  mod.cpp  mod.h  ter.cpp  ter.h  types.h  util.cpp  util.h  viewer.cpp  viewer.h  wld.cpp  wld.h  zon.cpp  zon.h
